[metadata]
name = vnotest-tempest-plugin
version = 0.0.1
summary = Basic Tempest plugin with a vno test case
description-file = README.rst
author = luc vermoesen
author-email = lucvermoesen@gmail.com
home-page = https://github.com/moesenl/vnotest
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: OpenStack Development Team
    Intended Audience :: OpenStack QA Team
    Intended Audience :: Information Technology
    Operating System :: Linux
    Natural Language :: English
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Programming Language :: Python
keywords =
    Plugin
    Tempest
    OpenStack

[entry_points]
tempest.test_plugins =
    vnotest-tempest-plugin = vnotest_tempest_plugin.plugin:MyPlugin

[pbr]
warnerrors = true
